# slp

./: .gitignore  README.md  edist.py
chap02/: edist.py
chap03/: .gitignore  CMakeLists.txt  Makefile  cdr2sentence.cpp  common.h  main.cpp  ngram.cpp  ngram.h  perplexity.cpp  sentence2ngram.cpp  utility.h
hmm/: .gitignore  CMakeLists.txt  Makefile  README.md  common.h  tagger.cpp  tagseq2tagseq_count.cpp  tagseq2tagseqcount.cpp  test2sentence.cpp  train2tagseq  train2tagseq.cpp  train2tagword_count.cpp  txt2tagseq  txt2tagseq.cpp  txt2tagword_count  txt2tagword_count.cpp  viterbi.cpp
parsing/: cfg2cnf.py  rules.txt
